[gd_scene load_steps=6 format=3 uid="uid://ck7ad4v2s2t0h"]

[ext_resource type="Script" path="res://Weapons/Weapon.gd" id="1_t1un2"]
[ext_resource type="Texture2D" uid="uid://lwuqnvgeedg8" path="res://Assets/weapon_silencer.png" id="2_7dbnr"]
[ext_resource type="Texture2D" uid="uid://blp10sn444vgr" path="res://Assets/objects.png" id="2_gkmbt"]

[sub_resource type="Animation" id="Animation_u2m68"]
resource_name = "MuzzleFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1y0b"]
_data = {
"MuzzleFlash": SubResource("Animation_u2m68")
}

[node name="Weapon" type="Node2D"]
script = ExtResource("1_t1un2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7dbnr")

[node name="GunBarrel" type="Marker2D" parent="."]
position = Vector2(18, 0)

[node name="GunDirection" type="Marker2D" parent="."]
position = Vector2(24, 0)

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(29, 0)
rotation = -1.5708
texture = ExtResource("2_gkmbt")
region_enabled = true
region_rect = Rect2(324, 334, 20, 25)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_f1y0b")
}
